<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">tepav</string>


    <string name="tepav">tepav</string>
    <string name="News">Haberler</string>
    <string name="Blogs">Günlükler</string>
    <string name="Research_And_Publications">Araştırma ve Yayınlar</string>
    <string name="Notes">Notlar</string>
    <string name="Reports_And_Printed_Publications">Raporlar ve Yayınlar</string>
    <string name="Read_List">Okuma Listesi</string>
    <string name="Favorites">Favoriler</string>
    <string name="Readed_Documents">Okuduklarım</string>
    <string name="Home">Home</string>
    <string name="Settings">Ayarlar</string>
    <string name="No_Internet_Fragment">No Internet Fragment</string>

    <string name="content_description">Nothing</string>

    <string name="like">Beğen</string>
    <string name="liked">Beğenildi</string>
    <string name="share">Paylaş</string>
    <string name="add_to_list">Listeye Ekle</string>
    <string name="added_to_list">Listeye Eklendi</string>

    <string name="comp_sec">%d saniye önce</string>
    <string name="comp_min">%d dakika önce</string>
    <string name="comp_hour">%d saat önce</string>
    <string name="comp_day">%d gün önce</string>
    <string name="comp_week">%d hafta önce</string>
    <string name="comp_month">%d ay önce</string>

    <string name="back">Geri</string>

    <string-array name="menu_items">
        <item>Haberler</item>
        <item>Günlük</item>
        <item>Araştırma ve Yayınlar</item>
        <item>Notlar</item>
        <item>Raporlar ve Yayınlar</item>
        <item>Okuma Listem</item>
        <item>Favoriler</item>
        <item>Okuduklarım</item>
        <item>Ayarlar</item>
    </string-array>

    <string name="loading">Yükleniyor…</string>

    <string name="doc_downloading">Dosya yükleniyor</string>
    <string name="open_doc">Dökümanı açmak için tıklayınız</string>
    <string name="not_found_doc">Açmak istediğiniz döküman bulunamadı!</string>
    <string name="no_doc">Bu yayına ait bir döküman bulunmamaktadır</string>

    <string name="do_register_upper_case">Üye Ol</string>
    <string name="do_register_lower_case">üye ol</string>
    <string name="do_login_header">Giriş Yapın</string>
    <string name="do_login_upper_case">Giriş Yap</string>
    <string name="do_login_lower_case">giriş yap</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="email">Eposta</string>
    <string name="password">Şifre</string>

    <string name="facebook_app_id">403145589827464</string>
    <string name="facebook_app_id_release">319921608157604</string>

    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="fill_all_blank">Lütfen boşlukları doldurunuz !</string>

    <string name="add_my_read_list">Okuma Listeme Ekle</string>
    <string name="add_my_favorites">Favorilereme Ekle</string>
    <string name="add_my_archive">Okuduklarıma Ekle</string>

    <!-- Alert Dialog -->
    <string name="ad_no_internet_error_title">İnternet Bağlantı Hatası</string>
    <string name="ad_no_internet_error_message">İnternet bağlantınız olmadığı için işleminizi gerçekleştiremiyoruz
    </string>

    <!-- Progress Dialog -->
    <string name="please_wait">Lütfen Bekleyiniz</string>
    <string name="login_started">Giriş yapılıyor…</string>
    <string name="register_started">Kayıt yapılıyor…</string>

    <string name="fragment_no_internet">
        İnternet bağlantınız olmadığı için şu anda yazılar yüklenemiyor. Dilerseniz Okuma Listenizdeki yazılara internet
        bağlantınız olmaksızın erişebilirsiniz.
    </string>
    <string name="problem_no_internet">İnternet Bağlantısı</string>

    <string name="no_list_fragment">Liste Boş</string>
    <string name="no_item_in_reading_list">Okuma listeniz boş. Bu listeye yazı eklemek için, yazı detayındaki "Listeye
        Ekle" menüsü altındaki "Okuma Listeme Ekle" butonunu kullanabilirsiniz.
    </string>
    <string name="no_item_in_favorites">Favori listeniz boş. Bu listeye yazı eklemek için, yazı detayındaki "Listeye
        Ekle" menüsü altındaki "Favorilerime Ekle" butonunu kullanabilirsiniz.
    </string>
    <string name="no_item_in_archive">Okuduklarım listeniz boş. Bu listeye yazı eklemek için, yazı detayındaki "Listeye
        Ekle" menüsü altındaki "Okuduklarıma Ekle" butonunu kullanabilirsiniz.
    </string>

    <string name="must_log_in">Bu özelliği kullanabilmek için öncelikle giriş yapmalısınız</string>
    <string name="warning">Uyarı</string>

    <string name="you_are_liked_this_post">Bu yazıyı beğendiniz</string>
    <string name="write_a_comment">Yorum Yaz</string>

    <string name="logout">Çıkış Yap</string>
    <string name="save_settings">Ayarları Kaydet</string>
    <string name="fullname">adı-soyadı</string>
    <string name="eposta">eposta</string>
    <string name="visit_web_page">Daha eski tarihli dokümanları görmek için tepav.org.tr\'yi ziyaret ediniz</string>

    <!-- Settings Screen --> 
    <string name="settings_notification_news">Yeni Haber Geldiğinde Uyar</string>
    <string name="settings_notification_blog">Yeni Günlük Geldiğinde Uyar</string>
    <string name="settings_notification_publication">Yeni Yayın Geldiğinde Uyar</string>

    <!-- Google Analytics-->
    <string name="ga_HomeFragment">Ana Ekran</string>
    <string name="ga_NewsFragment">Haber Listesi Ekranı</string>
    <string name="ga_BlogFragment">Günlük Listesi Ekranı</string>
    <string name="ga_PublicationFragment">Araştırma ve Yayınlar Listesi Ekranı</string>

    <string name="ga_ReadListFragment">Okuma Listesi Ekranı</string>
    <string name="ga_FavoriteFragment">Favoriler Listesi Ekranı</string>
    <string name="ga_ArchiveFragment">Okuduklarım Listesi Ekranı</string>
    <string name="ga_SettingsFragment">Ayarlar Ekranı</string>

    <string name="ga_Login">Giriş Ekranı</string>
    <string name="ga_Register">Üyelik Ekranı</string>

    <string name="ga_NewsDetails">Haber Detayı Ekranı</string>
    <string name="ga_BlogDetails">Günlük Detayı Ekranı</string>
    <string name="ga_PublicationDetails">Araştırma ve Yayınlar Detayı Ekranı</string>


</resources>
