<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/beyaz">

    <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
               android:scaleType="fitXY"
               android:contentDescription="@string/content_description"
               android:src="@drawable/blur_background"/>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/action_bar_height"
                    android:layout_alignParentTop="true"
                    android:background="@color/beyaz"
                    android:id="@+id/rlHeader">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:layout_alignParentLeft="true"
                      android:orientation="horizontal"
                      android:layout_margin="5dp"
                      android:id="@+id/llHeaderBack">

            <ImageView android:layout_width="@dimen/action_bar_back_button_size"
                       android:layout_height="@dimen/action_bar_back_button_size"
                       android:layout_gravity="center_vertical"
                       android:contentDescription="@string/content_description"
                       android:src="@drawable/ic_action_previous_item"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:textSize="@dimen/action_bar_back_button_font_size"
                      android:text="@string/back"/>

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/tvHeader"
                android:text="@string/tepav"
                android:textStyle="bold"
                android:textSize="@dimen/tepav_header_font_size"
                android:textColor="@color/tepav_siyahi"
                android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/rlHeader"
                    android:layout_above="@+id/rlFooter">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:background="@android:color/transparent"
                      android:layout_centerInParent="true"
                      android:orientation="vertical">

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@android:color/transparent">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/tvLogin"
                          android:layout_centerVertical="true"
                          android:layout_alignParentLeft="true"
                          android:textColor="@color/koyu_gri"
                          android:text="@string/do_login_header"
                          android:textSize="34sp"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/tvRegister"
                          android:layout_centerVertical="true"
                          android:layout_alignParentRight="true"
                          android:textColor="@color/koyu_gri"
                          android:text="@string/do_register_lower_case"
                          android:textSize="16sp"/>

            </RelativeLayout>

            <EditText android:layout_width="match_parent" android:layout_height="50dp"
                      android:id="@+id/etEmail"
                      android:layout_marginTop="20dp"
                      android:background="@drawable/rounded_white"
                      android:paddingLeft="10dp"
                      android:hint="@string/email"
                      android:inputType="textEmailAddress"/>

            <EditText android:layout_width="match_parent" android:layout_height="50dp"
                      android:id="@+id/etPassword"
                      android:layout_marginTop="10dp"
                      android:paddingLeft="10dp"
                      android:background="@drawable/rounded_white"
                      android:hint="@string/password"
                      android:inputType="textPassword"/>

            <Button android:layout_width="match_parent" android:layout_height="50dp"
                    android:id="@+id/bDoLogin"
                    android:layout_marginTop="20dp"
                    android:text="@string/do_login_upper_case"
                    android:textColor="@color/beyaz"
                    android:background="@drawable/rounded_cyan"/>

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout android:layout_width="match_parent" android:layout_height="100dp"
                    android:id="@+id/rlFooter"
                    android:layout_alignParentBottom="true"
                    android:background="@color/login_footer_background_color">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:layout_centerInParent="true"
                      android:orientation="horizontal">

            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/bTwitterLogin"
                    style="@style/TwitterLoginButton"
                    android:text=""
                    android:layout_weight="1"/>

            <com.facebook.widget.LoginButton
                    xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/authButton"
                    fb:login_text=""
                    fb:logout_text=""
                    style="@style/FacebookLoginButton" android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>