<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/beyaz">

    <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
               android:scaleType="fitXY"
               android:contentDescription="@string/content_description"
               android:src="@drawable/blur_background"/>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/action_bar_height"
                    android:layout_alignParentTop="true"
                    android:background="@color/beyaz"
                    android:id="@+id/rlHeader">

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/tvHeader"
                android:text="@string/tepav"
                android:textStyle="bold"
                android:textSize="@dimen/tepav_header_font_size"
                android:textColor="@color/tepav_siyahi"
                android:layout_centerInParent="true"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/tvActionBarHeader"
                  android:layout_margin="5dp"
                  android:text="@string/tepav"
                  android:textStyle="bold"
                  android:textSize="@dimen/tepav_header_font_size"
                  android:textColor="@color/tepav_siyahi"
                  android:layout_centerInParent="true"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="2dp"
                      android:orientation="horizontal"
                      android:layout_alignParentBottom="true">
            <View android:layout_width="0dp" android:layout_height="match_parent"
                  android:background="@drawable/action_bar_bottom_left"
                  android:layout_weight="1"/>

            <View android:layout_width="0dp" android:layout_height="match_parent"
                  android:background="@drawable/action_bar_bottom_right"
                  android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/rlHeader">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_centerInParent="true">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:gravity="center"
                      android:textColor="@color/koyu_gri"
                      android:textSize="16sp"
                      android:text="Kaydınızı tamamlayabilmemiz için bir eposta adresi giriniz"/>

            <EditText android:layout_width="match_parent" android:layout_height="50dp"
                      android:id="@+id/etEmail"
                      android:layout_marginTop="20dp"
                      android:background="@drawable/rounded_white"
                      android:paddingLeft="10dp"
                      android:hint="@string/email"
                      android:inputType="textEmailAddress"/>

            <Button android:layout_width="match_parent" android:layout_height="50dp"
                    android:id="@+id/bDoSaveUser"
                    android:layout_marginTop="20dp"
                    android:text="@string/do_login_upper_case"
                    android:textColor="@color/beyaz"
                    android:background="@drawable/rounded_cyan"/>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>