<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
               android:scaleType="fitXY"
               android:contentDescription="@string/content_description"
               android:src="@drawable/blur_background"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/tvTypeOfSettings"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:text="@string/Settings"
              android:textSize="30sp"
              android:singleLine="true"
              android:textColor="@color/favorites_font_color"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="30dp"
              android:layout_marginBottom="30dp"/>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:layout_below="@+id/tvTypeOfSettings">


        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:padding="20dp"
                      android:background="@color/beyaz"
                      android:orientation="vertical">

            <Switch
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/koyu_gri"
                    android:text="Yeni Haber Geldiğinde Uyar"
                    android:id="@+id/switchNews"/>

            <Switch
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/koyu_gri"
                    android:text="Yeni Günlük Geldiğinde Uyar"
                    android:id="@+id/switchBlog"/>

            <Switch
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/koyu_gri"
                    android:text="Yeni Yayın Geldiğinde Uyar"
                    android:id="@+id/switchPublication"/>

            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/bSaveNotificationSettings"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corners"
                    android:visibility="visible"
                    android:text="@string/save_settings"
                    android:textColor="@color/beyaz"/>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>