<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:swipe="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
            android:background="@color/beyaz"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
                   android:scaleType="fitXY"
                   android:contentDescription="@string/content_description"
                   android:src="@drawable/blur_background"/>


        <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:id="@+id/frameOfBlog"
                     android:layout_marginTop="@dimen/gradient_height_small"
                     android:layout_alignParentTop="true">

            <ImageView android:layout_width="match_parent" android:layout_height="200dp"
                       android:scaleType="fitXY"
                       android:src="@drawable/main_page_blog"/>

            <LinearLayout android:layout_width="@dimen/width_of_frame_information" android:layout_height="wrap_content"
                          android:background="@color/petrol_mavisi"
                          android:layout_gravity="right"
                          android:layout_marginTop="20dp"
                          android:orientation="horizontal">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_margin="5dp"
                          android:text="@string/Blogs"
                          android:textSize="15sp"
                          android:textStyle="bold"
                          android:textColor="@color/beyaz"/>
            </LinearLayout>
        </FrameLayout>

        <com.tepav.reader.helpers.swipelistview.SwipeListView
                android:layout_marginTop="@dimen/gradient_height_small"
                android:id="@+id/swipeListViewOfBlog"
                android:layout_below="@+id/frameOfBlog"
                android:listSelector="#00000000"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                swipe:swipeFrontView="@+id/frontOfBlog"
                swipe:swipeBackView="@+id/backOfBlog"
                swipe:swipeActionLeft="reveal"
                swipe:swipeActionRight="reveal"
                swipe:swipeMode="both"
                swipe:swipeDrawableChecked="@drawable/choice_selected"
                swipe:swipeDrawableUnchecked="@drawable/choice_unselected"
                swipe:swipeCloseAllItemsWhenMoveList="true"
                swipe:swipeOpenOnLongPress="true"
                swipe:swipeAnimationTime="100"/>

    </RelativeLayout>


    <!-- Loading Scren -->
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:id="@+id/rlLoading"
                    android:background="@color/gri">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:orientation="horizontal">

            <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:text="@string/loading"/>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>